--- a/src/components/search-room-card/search-room-card.pug
+++ b/src/components/search-room-card/search-room-card.pug
@@ -4,15 +4,15 @@ include ../submit-button/submit-button.pug
 
 mixin search-room-card()
 
-  - const dropdownInSearchRoomCard = [{name: "Взрослые", value: "0", min: "0", max: "3"},{name: "Дети", value: "0", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
+  - const dropdownInSearchRoomCard = [{ name: "Взрослые", value: "0", min: "0", max: "3" }, { name: "Дети", value: "0", min: "0", max: "3" }, { name: "Младенцы", value: "0", min: "0", max: "3" }]
 
   .search-room-card.js-search-room-card
     .search-room-card__content
       form(action="/mock-address", method="post")
         .search-room-card__title Найдём номера под ваши пожелания
         .search-room-card__date-dropdown
-          +date-dropdown({title1: "Прибытие", title2: "Выезд"})
+          +date-dropdown({ title1: 'Прибытие', title2: 'Выезд' })
         .search-room-card__dropdown  
-          +dropdown({title: "Гости", elements: dropdownInSearchRoomCard, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
+          +dropdown({ title: 'Гости', elements: dropdownInSearchRoomCard, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
         .search-room-card__submit-button  
-          +submit-button({text: "Подобрать номер"})
+          +submit-button({text: 'Подобрать номер'})
