--- a/src/pages/websitePages/landing-page/landing-page.pug
+++ b/src/pages/websitePages/landing-page/landing-page.pug
@@ -4,8 +4,7 @@ include ../../../components/footer/footer.pug
 include ../../../components/search-room-card/search-room-card.pug
 
 block variables 
-  -
-    const pageClass = "landing-page"
+  - const pageClass = 'landing-page'
 
 block title
   title Landing page
