--- a/src/pages/websitePages/registration/registration.pug
+++ b/src/pages/websitePages/registration/registration.pug
@@ -4,7 +4,7 @@ include ../../../components/footer/footer.pug
 include ../../../components/sign-up-card/sign-up-card.pug
 
 block variables 
-  - const pageClass = "registration"
+  - const pageClass = 'registration'
 
 block title
   title Registration
