--- a/src/pages/websitePages/sign-in/sign-in.pug
+++ b/src/pages/websitePages/sign-in/sign-in.pug
@@ -5,7 +5,7 @@ include ../../../components/sign-in-card/sign-in-card.pug
 
 block variables
   -
-    const pageClass = "sign-in"
+    const pageClass = 'sign-in'
 
 block title
   title Sign in
