--- a/src/components/booking-room-card/booking-room-card.pug
+++ b/src/components/booking-room-card/booking-room-card.pug
@@ -2,24 +2,24 @@ include ../date-dropdown/date-dropdown.pug
 include ../dropdown/dropdown.pug
 include ../submit-button/submit-button.pug
 
-mixin booking-room-card({number, costForDay, isLux})
+mixin booking-room-card({ number, costForDay, isLux })
 
-  - const dropdownInBookRoomCard = [{name: "Взрослые", value: "0", min: "0", max: "3"},{name: "Дети", value: "1", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
+  - const dropdownInBookRoomCard = [{ name: "Взрослые", value: "0", min: "0", max: "3" }, { name: "Дети", value: "1", min: "0", max: "3" }, { name: "Младенцы", value: "0", min: "0", max: "3" }]
 
   .booking-room-card.js-booking-room-card
     .booking-room-card__content
       form(action="/mock-address", method="post")
         .booking-room-card__title
           .booking-room-card__symbol № 
-          .booking-room-card__number(class=!isLux && "booking-room-card__number_no-lux") #{number}
+          .booking-room-card__number(class=!isLux && "booking-room-card__number_no-lux")= number
           if(isLux)
             .booking-room-card__lux ЛЮКС
           .booking-room-card__cost-for-day #{costForDay}&#8381;
           .booking-room-card__text в сутки
         .booking-room-card__date-dropdown
-          +date-dropdown({title1: "Прибытие", title2: "Выезд"})
+          +date-dropdown({ title1: 'Прибытие', title2: 'Выезд' })
         .booking-room-card__dropdown  
-          +dropdown({title: "Гости", elements: dropdownInBookRoomCard, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
+          +dropdown({ title: 'Гости', elements: dropdownInBookRoomCard, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
         .booking-room-card__calculate
           .booking-room-card__row
             .booking-room-card__sum #{costForDay}&#8381; х 4 суток
@@ -35,4 +35,4 @@ mixin booking-room-card({number, costForDay, isLux})
           .booking-room-card__border
           .booking-room-card__total-sum 38 081&#8381;
         .booking-room-card__submit-button  
-          +submit-button({text: "Забронировать"})
+          +submit-button({ text: 'Забронировать' })
