--- a/src/components/sign-in-card/sign-in-card.pug
+++ b/src/components/sign-in-card/sign-in-card.pug
@@ -9,12 +9,12 @@ mixin sign-in-card()
       form(action="/mock-address", method="post")
         .sign-in-card__title Войти
         .sign-in-card__email
-          +text-field({type: "email", placeholder: "Email", isRequired: true})
+          +text-field({ type: 'email', placeholder: 'Email', isRequired: true })
         .sign-in-card__password
-          +text-field({type: "password", placeholder: "Пароль", isRequired: true})
+          +text-field({ type: 'password', placeholder: 'Пароль', isRequired: true })
         .sign-in-card__submit
-          +submit-button({text: "Войти"})
+          +submit-button({text: 'Войти'})
         .sign-in-card__sign-up
           .sign-in-card__sign-up-text Нет аккаунта на Toxin?
           .sign-in-card__sign-up-button 
-          +button({color: "white", place: "in-form", text: "Cоздать"})
+          +button({ color: 'white', place: 'in-form', text: 'Cоздать' })
