--- a/src/pages/layout/layout.pug
+++ b/src/pages/layout/layout.pug
@@ -4,23 +4,23 @@ include ../../components/footer/footer.pug
 block variables 
 
 -
-  const navbarInHeaderRu = [{url: "/mock-address", text: "О нас"},
-                            {text: "Услуги", submenu: [{url: "/mock-address", text: "test1"},{url: "/mock-address", text: "test2"}]},
-                            {url: "/mock-address", text: "Вакансии"},
-                            {url: "/mock-address", text: "Новости"},
-                            {text: "Соглашения", submenu: [{url: "/mock-address", text: "test3"},{url: "/mock-address", text: "test4"}]}]
+  const navbarInHeaderRu = [{ url: "/mock-address", text: "О нас" },
+                            { text: "Услуги", submenu: [{ url: "/mock-address", text: "test1" }, { url: "/mock-address", text: "test2" }] },
+                            { url: "/mock-address", text: "Вакансии" },
+                            { url: "/mock-address", text: "Новости" },
+                            { text: "Соглашения", submenu: [{ url: "/mock-address", text: "test3" }, { url: "/mock-address", text: "test4" }] }]
 
-  const footerMenuRu = [{title: "навигация", submenu: [{url: "/mock-address", text: "О нас"},
-                                                      {url: "/mock-address", text: "Новости"},
-                                                      {url: "/mock-address", text: "Служба поддержки"},
-                                                      {url: "/mock-address", text: "Услуги"}]},
-                      {title: "О нас", submenu:  [{url: "/mock-address", text: "О сервисе"},
-                                                      {url: "/mock-address", text: "Наша команда"},
-                                                      {url: "/mock-address", text: "Вакансии"},
-                                                      {url: "/mock-address", text: "Инвесторы"}]},
-                      {title: "служба поддержки", submenu:   [{url: "/mock-address", text: "Соглашения"},
-                                                      {url: "/mock-address", text: "Сообщества"},
-                                                      {url: "/mock-address", text: "Связь с нами"}]}]
+  const footerMenuRu = [{ title: "навигация", submenu: [{ url: "/mock-address", text: "О нас" },
+                                                      { url: "/mock-address", text: "Новости" },
+                                                      { url: "/mock-address", text: "Служба поддержки" },
+                                                      { url: "/mock-address", text: "Услуги" }] },
+                      { title: "О нас", submenu:  [{ url: "/mock-address", text: "О сервисе" },
+                                                      { url: "/mock-address", text: "Наша команда" },
+                                                      { url: "/mock-address", text: "Вакансии" },
+                                                      { url: "/mock-address", text: "Инвесторы" }] },
+                      { title: "служба поддержки", submenu:   [{ url: "/mock-address", text: "Соглашения" },
+                                                      { url: "/mock-address", text: "Сообщества" },
+                                                      { url: "/mock-address", text: "Связь с нами" }] }]
 
 doctype html
 html(lang="ru")
@@ -37,13 +37,13 @@ html(lang="ru")
     
     block title
 
-  body(class= pageClass)
+  body(class=pageClass)
     block header
       header(class=pageClass + "__header")
-        +header({navbar: navbarInHeaderRu, buttonLogin: "войти", buttonRegister: "зарегистрироваться"})
+        +header({ navbar: navbarInHeaderRu, buttonLogin: 'войти', buttonRegister: 'зарегистрироваться' })
 
     block content 
 
     block footer 
       footer(class=pageClass + "__footer")
-        +footer({footerText: "Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»", menu: footerMenuRu, subscriptionTitle: "Подписка", subscriptionText: "Получайте специальные предложения и новости сервиса", copyright: "Copyright © 2018 Toxin отель. Все права зачищены."})
+        +footer({ footerText: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', menu: footerMenuRu, subscriptionTitle: 'Подписка', subscriptionText: 'Получайте специальные предложения и новости сервиса', copyright: 'Copyright © 2018 Toxin отель. Все права зачищены.' })
