--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -24,7 +24,7 @@ include ../../../components/range-slider/range-slider.pug
 
 block variables
   -
-    const pageClass = "form-elements"
+    const pageClass = 'form-elements'
 
     const roomDetailsInFormEl = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
                   {materIcon: "location_city", title: "Удобство", description: "Окно в каждой из спален"}]
@@ -64,83 +64,83 @@ block content
   .form-elements__content
     .form-elements__column_pos_left
       .form-elements__field-default
-        +text-field({type: "text", title: "text field", placeholder: "Email"})
+        +text-field({ type: 'text', title: 'text field', placeholder: 'Email' })
       .form-elements__field-focus
-        +text-field({type: "text", title: "text field", value: "This is pretty awesome"})
+        +text-field({ type: 'text', title: 'text field', value: 'This is pretty awesome' })
       .form-elements__dropdown.form-elements__dropdown_pos_left
-        +dropdown({title: "dropdown", elements: dropdownMidInFormEl, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
+        +dropdown({ title: 'dropdown', elements: dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
       .form-elements__masked-field
-        +masked({title: "masked text field"})
+        +masked({ title: 'masked text field' })
       .form-elements__date-dropdown
-        +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
+        +date-dropdown({ title1: 'date dropdown', title2: 'date dropdown' })
       .form-elements__filter-date
-        +filter-date({title: 'filter date dropdown'})
+        +filter-date({ title: 'filter date dropdown' })
       .form-elements__subscription
-        +subscription({title: "subscription text field", placeholder: "Email", isRequired: true})
+        +subscription({ title: 'subscription text field', placeholder: 'Email', isRequired: true })
       .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small
-        +dropdown({title: "dropdown", elements: roomDropdown, resultDefault: "Сколько комнат"})
+        +dropdown({ title: 'dropdown', elements: roomDropdown, resultDefault: 'Сколько комнат' })
       .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small.form-elements__dropdown_expanded
-        +dropdown({title: "dropdown", elements: roomDropdown, resultDefault: "Сколько комнат", isExpanded: true})
+        +dropdown({ title: 'dropdown', elements: roomDropdown, resultDefault: 'Сколько комнат', isExpanded: true })
       .form-elements__expandable-checkbox
-        +expandable-checkbox({title: "expandable checkbox list", checkboxList: checkboxesToList})
+        +expandable-checkbox({ title: 'expandable checkbox list', checkboxList: checkboxesToList })
       .form-elements__expandable-checkbox.form-elements__expandable-checkbox_expanded
-        +expandable-checkbox({title: "expandable checkbox list", checkboxList: checkboxesToList, isExpanded: true})
+        +expandable-checkbox({ title: 'expandable checkbox list', checkboxList: checkboxesToList, isExpanded: true })
       .form-elements__abouts-room
-        +abouts-room({roomDetails: roomDetailsInFormEl})
+        +abouts-room({ roomDetails: roomDetailsInFormEl })
     .form-elements__column_pos_mid
       .form-elements__checkbox-text.form-elements__text checkbox buttons
       .form-elements__checkbox
-        +checkbox({checkboxes: checkboxes})
+        +checkbox({ checkboxes: checkboxes })
       .form-elements__radio-text.form-elements__text radio buttons
       .form-elements__radio
-        +radio-button({title: "Пол", radioButtons: radioButtons})
+        +radio-button({ title: 'Пол', radioButtons: radioButtons })
       .form-elements__toggle-text.form-elements__text toggle
       .form-elements__toggle
-        +toggle({label: "Получать спецпредложения", isChecked: true})
+        +toggle({ label: 'Получать спецпредложения', isChecked: true })
       .form-elements__toggle
-        +toggle({label: "Получать спецпредложения"})
+        +toggle({ label: 'Получать спецпредложения' })
       .form-elements__like-button-text.form-elements__text like button
       .form-elements__like-button
-        +like-button({count: "2"})
+        +like-button({ count: '2' })
       .form-elements__like-button
-        +like-button({count: "12", isLiked: true})
+        +like-button({ count: '12', isLiked: true })
       .form-elements__rate-button-text.form-elements__text rate button
       .form-elements__rate-button
-        +rate-button({activeStars: "4"})
+        +rate-button({ activeStars: '4' })
       .form-elements__rate-button
-        +rate-button({activeStars: "5"})
+        +rate-button({ activeStars: '5' })
       .form-elements__dropdown.form-elements__dropdown_pos_mid
-        +dropdown({title: "dropdown", elements: dropdownMidInFormEl, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
+        +dropdown({ title: 'dropdown', elements: dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__rich-checkbox-text.form-elements__text rich checkbox buttons
       .form-elements__rich-checkbox
-        +rich-checkbox({richCheckbox: richCheckboxes})
+        +rich-checkbox({ richCheckbox: richCheckboxes })
     .form-elements__column_pos_right
       .form-elements__range-slider
-        +range-slider({title: "range slider"})
+        +range-slider({ title: 'range slider' })
       .form-elements__buttons-text.form-elements__text buttons
       .form-elements__button.form-elements__button_color_purple
-        +button({color: "purple", place: "in-form", text: "click me"})
+        +button({ color: 'purple', place: 'in-form', text: 'click me' })
       .form-elements__button.form-elements__button_color_purple
-        +button({color: "purple", place: "in-form", text: "click me"})
+        +button({ color: 'purple', place: 'in-form', text: 'click me' })
       .form-elements__button.form-elements__button_color_white
-        +button({color: "white", place: "in-form", text: "click me"})
+        +button({ color: 'white', place: 'in-form', text: 'click me' })
       .form-elements__button.form-elements__button_color_white
-        +button({color: "white", place: "in-form", text: "click me"})
+        +button({ color: 'white', place: 'in-form', text: 'click me' })
       .form-elements__text-button
-        +text-button({ text: "click me" })
+        +text-button({  text: 'click me'  })
       .form-elements__text-button
-        +text-button({ text: "click me" })
+        +text-button({  text: 'click me'  })
       .form-elements__submit-button
-        +submit-button({text: "Перейти к оплате"})
+        +submit-button({ text: 'Перейти к оплате' })
       .form-elements__pagination-text.form-elements__text pagination
       .form-elements__pagination
-        +pagination({caption: "1 - 12 из 100+ вариантов аренды"})
+        +pagination({ caption: '1 - 12 из 100+ вариантов аренды' })
       .form-elements__dropdown.form-elements__dropdown_pos_right
-        +dropdown({title: "dropdown", elements: dropdownRightInFormEl, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
+        +dropdown({ title: 'dropdown', elements: dropdownRightInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__bullet-list-text.form-elements__text bullet list
       .form-elements__bullet-list
-        +bullet-list({bulletList: bulletList})
+        +bullet-list({ bulletList: bulletList })
     .form-elements__comment
-      +comment({avatar: "avatar1.jpg", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})
+      +comment({ avatar: 'avatar1.jpg', name: 'Мурад Сарафанов', dateText: '5 дней назад', likeButton: { count: 12, isLiked: true }, text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.' })
 
 block footer
