--- a/src/pages/ui-kit/headers-footers/headers-footers.pug
+++ b/src/pages/ui-kit/headers-footers/headers-footers.pug
@@ -6,7 +6,7 @@ include ../../../components/footer/footer.pug
 
 block variables 
   -
-    const pageClass = "headers-footers"
+    const pageClass = 'headers-footers'
 
     const navbarInHeaderEn = [{url: "/mock-address", text: "Home"},
                             {url: "/mock-address", text: "About Us"},
@@ -40,11 +40,11 @@ block content
       +logo
   .headers-footers__content
     .headers-footers__header
-      +header({navbar: navbarInHeaderEn, buttonLogin: "login", buttonRegister: "register"})
+      +header({ navbar: navbarInHeaderEn, buttonLogin: 'login', buttonRegister: 'register' })
     .headers-footers__header.headers-footers__header_logged-in
-      +header({navbar: navbarInHeaderEn, userName: "Cosmin Negoita"})
+      +header({ navbar: navbarInHeaderEn, userName: 'Cosmin Negoita' })
     .headers-footers__footer
-      +footer({footerText: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.", menu: footerMenuEn, subscriptionTitle: "Subscribe to our newsletter", subscriptionText: "Receive our latest news and promotions in your inbox!", copyright: "Copyright © 2018 Toxin UI Kit. All rights reserved."})
+      +footer({ footerText: 'Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.', menu: footerMenuEn, subscriptionTitle: 'Subscribe to our newsletter', subscriptionText: 'Receive our latest news and promotions in your inbox!', copyright: 'Copyright © 2018 Toxin UI Kit. All rights reserved.' })
     .headers-footers__footer-creative
       +footer-creative()
 
