--- a/src/pages/websitePages/room-details/room-details.pug
+++ b/src/pages/websitePages/room-details/room-details.pug
@@ -8,7 +8,7 @@ include ../../../components/booking-room-card/booking-room-card.pug
 
 block variables
   -
-    const pageClass = "room-details"
+    const pageClass = 'room-details'
 
     const roomDetailsInSite = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
                   {materIcon: "location_city", title: "Удобство", description: "Окно в каждой из спален"},
@@ -33,7 +33,7 @@ block content
           .room-details__room-info
             .room-details__text Сведения о номере
             .room-details__abouts-room
-              +abouts-room({roomDetails: roomDetailsInSite})
+              +abouts-room({ roomDetails: roomDetailsInSite })
           .room-details__room-impression
             .room-details__text Впечатления от номера
             .room-details__wrapper.room-details__wrapper_place_impression
@@ -48,16 +48,16 @@ block content
           .room-details__num-of-comments 2 отзыва
         .room-details__comments
           .room-details__comment
-            +comment({avatar: "avatar1.jpg", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})      
+            +comment({ avatar: 'avatar1.jpg', name: 'Мурад Сарафанов', dateText: '5 дней назад', likeButton: { count: 12, isLiked: true }, text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.' })      
           .room-details__comment
-            +comment({avatar: "avatar2.jpg", name: "Патрисия Стёклышкова", dateText: "Неделю назад", likeButton: {count: 2}, text: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент"})      
+            +comment({ avatar: 'avatar2.jpg', name: 'Патрисия Стёклышкова', dateText: 'Неделю назад', likeButton: { count: 2 }, text: 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент' })      
         .room-details__wrapper
           .room-details__rules
             .room-details__text.room-details__text_place_rules Правила
             .room-details__bullet-list
-              +bullet-list({bulletList})
+              +bullet-list({ bulletList })
           .room-details__cancel
             .room-details__text Отмена
             .room-details__cancel-text Бесплатная отмена в течении 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
       section.room-details__booking-room-card
-        +booking-room-card({number: "888", costForDay: "9 990", isLux: true})
+        +booking-room-card({ number: '888', costForDay: '9 990', isLux: true })
