--- a/src/components/booking-room-card/booking-room-card.pug
+++ b/src/components/booking-room-card/booking-room-card.pug
@@ -4,7 +4,7 @@ include ../submit-button/submit-button.pug
 
 mixin booking-room-card({ number, costForDay, isLux })
 
-  - const dropdownInBookRoomCard = [{ name: "Взрослые", value: "0", min: "0", max: "3" }, { name: "Дети", value: "1", min: "0", max: "3" }, { name: "Младенцы", value: "0", min: "0", max: "3" }]
+  - const consts = require('@components/booking-room-card/constants.json')
 
   .booking-room-card.js-booking-room-card
     .booking-room-card__content
@@ -19,7 +19,7 @@ mixin booking-room-card({ number, costForDay, isLux })
         .booking-room-card__date-dropdown
           +date-dropdown({ title1: 'Прибытие', title2: 'Выезд' })
         .booking-room-card__dropdown  
-          +dropdown({ title: 'Гости', elements: dropdownInBookRoomCard, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
+          +dropdown({ title: 'Гости', elements: consts.dropdownInBookRoomCard, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
         .booking-room-card__calculate
           .booking-room-card__row
             .booking-room-card__sum #{costForDay}&#8381; х 4 суток
