--- a/src/pages/layout/layout.pug
+++ b/src/pages/layout/layout.pug
@@ -3,24 +3,7 @@ include ../../components/footer/footer.pug
 
 block variables 
 
--
-  const navbarInHeaderRu = [{ url: "/mock-address", text: "О нас" },
-                            { text: "Услуги", submenu: [{ url: "/mock-address", text: "test1" }, { url: "/mock-address", text: "test2" }] },
-                            { url: "/mock-address", text: "Вакансии" },
-                            { url: "/mock-address", text: "Новости" },
-                            { text: "Соглашения", submenu: [{ url: "/mock-address", text: "test3" }, { url: "/mock-address", text: "test4" }] }]
-
-  const footerMenuRu = [{ title: "навигация", submenu: [{ url: "/mock-address", text: "О нас" },
-                                                      { url: "/mock-address", text: "Новости" },
-                                                      { url: "/mock-address", text: "Служба поддержки" },
-                                                      { url: "/mock-address", text: "Услуги" }] },
-                      { title: "О нас", submenu:  [{ url: "/mock-address", text: "О сервисе" },
-                                                      { url: "/mock-address", text: "Наша команда" },
-                                                      { url: "/mock-address", text: "Вакансии" },
-                                                      { url: "/mock-address", text: "Инвесторы" }] },
-                      { title: "служба поддержки", submenu:   [{ url: "/mock-address", text: "Соглашения" },
-                                                      { url: "/mock-address", text: "Сообщества" },
-                                                      { url: "/mock-address", text: "Связь с нами" }] }]
+- const constants = require('@pages/layout/constants.json')
 
 doctype html
 html(lang="ru")
@@ -40,10 +23,10 @@ html(lang="ru")
   body(class=pageClass)
     block header
       header(class=pageClass + "__header")
-        +header({ navbar: navbarInHeaderRu, buttonLogin: 'войти', buttonRegister: 'зарегистрироваться' })
+        +header({ navbar: constants.navbarInHeaderRu, buttonLogin: 'войти', buttonRegister: 'зарегистрироваться' })
 
     block content 
 
     block footer 
       footer(class=pageClass + "__footer")
-        +footer({ footerText: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', menu: footerMenuRu, subscriptionTitle: 'Подписка', subscriptionText: 'Получайте специальные предложения и новости сервиса', copyright: 'Copyright © 2018 Toxin отель. Все права зачищены.' })
+        +footer({ footerText: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', menu: constants.footerMenuRu, subscriptionTitle: 'Подписка', subscriptionText: 'Получайте специальные предложения и новости сервиса', copyright: 'Copyright © 2018 Toxin отель. Все права зачищены.' })
