--- a/src/pages/ui-kit/colors-type/colors-type.pug
+++ b/src/pages/ui-kit/colors-type/colors-type.pug
@@ -7,13 +7,7 @@ block variables
   -
     const pageClass = "colors-type"
 
-    const blocksColor = [{color: "dark-shade-100", name: "Dark Shade 100%", rgb: "#1F2041"},{color: "dark-shade-75", name: "Dark Shade 75%", rgb: "#1F2041"},
-                        {color: "dark-shade-50", name: "Dark Shade 50%", rgb: "#1F2041"},{color: "dark-shade-25", name: "Dark Shade 25%", rgb: "#1F2041"},
-                        {color: "dark-shade-05", name: "Dark Shade 5%", rgb: "#1F2041"},{color: "purple", name: "Purple", rgb: "#BC9CFF"},
-                        {color: "green", name: "Green", rgb: "#6FCF97"}]
-
-    const types = [{type: "H1", text: "This one is the sub-section or widget title"},{type: "H2", text: "Next one is the item title inside widgets"},
-                        {type: "H3", text: "This is a label or CTA text"},{type: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."}]
+    const consts = require('./constants.json')
 
 block favicons 
 
@@ -28,11 +22,11 @@ block content
       +logo()
   .colors-type__content
     .blocks-color
-      each item in blocksColor
+      each item in consts.blocksColor
         .blocks-color__block-color
           +block-color(item)
     .types
-      each item in types
+      each item in consts.types
         .types__type
           +type(item)
 
