--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -26,29 +26,7 @@ block variables
   -
     const pageClass = 'form-elements'
 
-    const roomDetailsInFormEl = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
-                  {materIcon: "location_city", title: "Удобство", description: "Окно в каждой из спален"}]
-
-    const checkboxes = [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true},{label: "Можно пригласить гостей (до 10 человек)", isChecked: true}]
-
-    const checkboxesToList = [{label: "Завтрак"},{label: "Письменный стол", isChecked: true},{label: "Стул для кормления", isChecked: true},
-                              {label: "Кроватка", isChecked: true},{label: "Телевизор"},{label: "Шампунь"},{label: "Телевизор"},{label: "Шампунь"}]
-
-    const radioButtons = [{label: "Мужчина", isChecked: true},{label: "Женщина"}]
-
-    const richCheckboxes = [{label: "Широкий коридор", description: "Ширина коридора в номере не менее 91 см."},
-                          {label: "Помощник для инвалидов", description: "На 1 этаже вас встретит специалист и проводит до номера"}]
-  
-    const bulletList = ["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"]
-
-    const roomDropdown = [{name: "Спальни", nameForms: ["Спальня","Спальни","Спален"], value: "2", min: "0", max: "5"},
-                    {name: "Кровати", nameForms: ["Кровать","Кровати","Кроватей"], value: "2", min: "0", max: "5"},
-                    {name: "Ванные комнаты",  nameForms: ["Ванная комната","Ванных комнаты","Ванных комнат"], value: "0", min: "0", max: "5"}]
-
-    const dropdownMidInFormEl = [{name: "Взрослые", value: "0", min: "0", max: "3"},{name: "Дети", value: "0", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
-
-    const dropdownRightInFormEl = [{name: "Взрослые", value: "2", min: "0", max: "3"},{name: "Дети", value: "1", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
-
+    const consts = require('./constants.json')
 
 block favicons
 
@@ -68,7 +46,7 @@ block content
       .form-elements__field-focus
         +text-field({ type: 'text', title: 'text field', value: 'This is pretty awesome' })
       .form-elements__dropdown.form-elements__dropdown_pos_left
-        +dropdown({ title: 'dropdown', elements: dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
+        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
       .form-elements__masked-field
         +masked({ title: 'masked text field' })
       .form-elements__date-dropdown
@@ -78,22 +56,22 @@ block content
       .form-elements__subscription
         +subscription({ title: 'subscription text field', placeholder: 'Email', isRequired: true })
       .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small
-        +dropdown({ title: 'dropdown', elements: roomDropdown, resultDefault: 'Сколько комнат' })
+        +dropdown({ title: 'dropdown', elements: consts.roomDropdown, resultDefault: 'Сколько комнат' })
       .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small.form-elements__dropdown_expanded
-        +dropdown({ title: 'dropdown', elements: roomDropdown, resultDefault: 'Сколько комнат', isExpanded: true })
+        +dropdown({ title: 'dropdown', elements: consts.roomDropdown, resultDefault: 'Сколько комнат', isExpanded: true })
       .form-elements__expandable-checkbox
-        +expandable-checkbox({ title: 'expandable checkbox list', checkboxList: checkboxesToList })
+        +expandable-checkbox({ title: 'expandable checkbox list', checkboxList: consts.checkboxesToList })
       .form-elements__expandable-checkbox.form-elements__expandable-checkbox_expanded
-        +expandable-checkbox({ title: 'expandable checkbox list', checkboxList: checkboxesToList, isExpanded: true })
+        +expandable-checkbox({ title: 'expandable checkbox list', checkboxList: consts.checkboxesToList, isExpanded: true })
       .form-elements__abouts-room
-        +abouts-room({ roomDetails: roomDetailsInFormEl })
+        +abouts-room({ roomDetails: consts.roomDetailsInFormEl })
     .form-elements__column_pos_mid
       .form-elements__checkbox-text.form-elements__text checkbox buttons
       .form-elements__checkbox
-        +checkbox({ checkboxes: checkboxes })
+        +checkbox({ checkboxes: consts.checkboxes })
       .form-elements__radio-text.form-elements__text radio buttons
       .form-elements__radio
-        +radio-button({ title: 'Пол', radioButtons: radioButtons })
+        +radio-button({ title: 'Пол', radioButtons: consts.radioButtons })
       .form-elements__toggle-text.form-elements__text toggle
       .form-elements__toggle
         +toggle({ label: 'Получать спецпредложения', isChecked: true })
@@ -110,10 +88,10 @@ block content
       .form-elements__rate-button
         +rate-button({ activeStars: '5' })
       .form-elements__dropdown.form-elements__dropdown_pos_mid
-        +dropdown({ title: 'dropdown', elements: dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
+        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__rich-checkbox-text.form-elements__text rich checkbox buttons
       .form-elements__rich-checkbox
-        +rich-checkbox({ richCheckbox: richCheckboxes })
+        +rich-checkbox({ richCheckboxes: consts.richCheckboxes })
     .form-elements__column_pos_right
       .form-elements__range-slider
         +range-slider({ title: 'range slider' })
@@ -136,10 +114,10 @@ block content
       .form-elements__pagination
         +pagination({ caption: '1 - 12 из 100+ вариантов аренды' })
       .form-elements__dropdown.form-elements__dropdown_pos_right
-        +dropdown({ title: 'dropdown', elements: dropdownRightInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
+        +dropdown({ title: 'dropdown', elements: consts.dropdownRightInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__bullet-list-text.form-elements__text bullet list
       .form-elements__bullet-list
-        +bullet-list({ bulletList: bulletList })
+        +bullet-list({ bulletList: consts.bulletList })
     .form-elements__comment
       +comment({ avatar: 'avatar1.jpg', name: 'Мурад Сарафанов', dateText: '5 дней назад', likeButton: { count: 12, isLiked: true }, text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.' })
 
