--- a/src/pages/websitePages/search-room/search-room.pug
+++ b/src/pages/websitePages/search-room/search-room.pug
@@ -14,20 +14,7 @@ block variables
   -
     const pageClass = 'search-room'
 
-    const guestDropdown = [{name: "Гости", nameForms: ["гость","гостя","гостей"], value: "3", min: "0", max: "5"},
-                        {name: "младенцы", nameForms: ["младенец","младенца","младенцев"], value: "1", min: "0", max: "3"}]
-
-    const checkboxes = [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true},{label: "Можно пригласить гостей (до 10 человек)", isChecked: true}]
-
-    const checkboxesToList = [{label: "Завтрак"},{label: "Письменный стол", isChecked: true},{label: "Стул для кормления", isChecked: true},
-                                {label: "Кроватка", isChecked: true},{label: "Телевизор"},{label: "Шампунь"},{label: "Телевизор"},{label: "Шампунь"}]
-
-    const richCheckboxes = [{label: "Широкий коридор", description: "Ширина коридора в номере не менее 91 см."},
-                            {label: "Помощник для инвалидов", description: "На 1 этаже вас встретит специалист и проводит до номера"}]       
-
-    const roomDropdown = [{name: "Спальни", nameForms: ["Спальня","Спальни","Спален"], value: "2", min: "0", max: "5"},
-                      {name: "Кровати", nameForms: ["Кровать","Кровати","Кроватей"], value: "2", min: "0", max: "5"},
-                      {name: "Ванные комнаты",  nameForms: ["Ванная комната","Ванных комнаты","Ванных комнат"], value: "0", min: "0", max: "5"}]                                                                                         
+    const consts = require('./constants.json')                                                                                         
 
 block title
   title Search room 
@@ -39,20 +26,20 @@ block content
           .search-room__filter-date
             +filter-date({ title: 'даты пребывания в отеле' })
           .search-room__guest-dropdown
-            +dropdown({ title: 'гости', elements: guestDropdown, resultDefault: 'Сколько гостей' })
+            +dropdown({ title: 'гости', elements: consts.guestDropdown, resultDefault: 'Сколько гостей' })
           .search-room__range-slider
             +range-slider({ title: 'диапазон цены' })
           .search-room__text.search-room__text_size_small Стоимость за сутки пребывания в номере
           .search-room__text checkbox buttons
           .search-room__checkbox
-            +checkbox({ checkboxes: checkboxes })
+            +checkbox({ checkboxes: consts.checkboxes })
           .search-room__text доступность
           .search-room__rich-checkbox
-            +rich-checkbox({ richCheckbox: richCheckboxes })
+            +rich-checkbox({ richCheckboxes: consts.richCheckboxes })
           .search-room__room-dropdown
-            +dropdown({ title: 'удобства номера', elements: roomDropdown, resultDefault: 'Сколько комнат' })
+            +dropdown({ title: 'удобства номера', elements: consts.roomDropdown, resultDefault: 'Сколько комнат' })
           .search-room__expandable-checkbox
-            +expandable-checkbox({ title: 'дополнительные удобства', checkboxList: checkboxesToList })
+            +expandable-checkbox({ title: 'дополнительные удобства', checkboxList: consts.checkboxesToList })
         section.search-room__result
           .search-room__title Номера, которые мы для вас подобрали
           .search-room__room-cards
