--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -1,11 +1,7 @@
-//- Сюда передаётся массив [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true}]
-mixin checkbox({ checkboxes })
+mixin checkbox({ label, isChecked })
 
-  .checkboxes
-    each item in checkboxes
-      - const { label, isChecked } = item
-      .checkbox
-        label.checkbox__label
-          input.checkbox__input(type="checkbox", name=label, checked=isChecked)
-          span.checkbox__box
-          = label
+  .checkbox
+    label.checkbox__label
+      input.checkbox__input(type="checkbox", name=label, checked=isChecked)
+      span.checkbox__box
+      = label
