--- a/src/components/expandable-checkbox/expandable-checkbox.scss
+++ b/src/components/expandable-checkbox/expandable-checkbox.scss
@@ -33,5 +33,14 @@
     &_expanded {
       display: block;
     }
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  &__checkbox {
+    margin-bottom: 10.5px;
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
