--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -1,33 +1,51 @@
 @import '../../scss/variables.scss';
 
 .pagination {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  &__number {
+  &__wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item {
     width: 2.5rem;
     font-size: 0.75rem;
     line-height: 2.5rem;
     color: $color-main-50;
     text-align: center;
-    cursor: pointer;
     border-radius: 22px;
-    &:hover {
-      background-image: linear-gradient(180deg, rgba(188, 156, 255, 0.4) 0%, rgba(139, 164, 249, 0.4) 100%);
+    &_type {
+      &_current {
+        opacity: 1;
+        font-weight: bold;
+        color: white;
+        background: $color-secondary-gradient;
+        cursor: default;
+      }
+      &_link {
+        cursor: pointer;
+        text-decoration: none;
+        &:hover {
+          background-image: linear-gradient(180deg, rgba(188, 156, 255, 0.4) 0%, rgba(139, 164, 249, 0.4) 100%);
+        }
+      }
+      &_dots {
+        cursor: default;
+      }
+      &_button {
+        cursor: pointer;
+        text-decoration: none;
+        font-family: $material-icons;
+        color: white;
+        background: $color-tertiary-gradient;
+        font-size: 1.5rem;
+        opacity: 0.7;
+        transition: opacity 0.4s;
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
-    &:first-child {
-      opacity: 1;
-      font-weight: bold;
-      color: white;
-      background: $color-secondary-gradient;
-      cursor: default;
-    }
-    &:last-child {
-      font-family: $material-icons;
-      color: white;
-      background: $color-tertiary-gradient;
-      font-size: 1.5rem;
-    }
+    
   }
   &__caption {
     font-size: 0.875rem;
