--- a/src/pages/websitePages/search-room/search-room.pug
+++ b/src/pages/websitePages/search-room/search-room.pug
@@ -73,4 +73,4 @@ block content
             .search-room__room-card
               +room-card({ images: ['room12.jpg', 'room1.jpg', 'room2.jpg', 'room3.jpg'], number: '352', costForDay: '5 000', activeStars: 3, numOfComments: '55' })
           .search-room__pagination
-            +pagination({ caption: '1 - 12 из 100+ вариантов аренды' })
+            +pagination({ current: 1, last: 15, caption: '1 - 12 из 100+ вариантов аренды' })
