Added template string where possible #12

--- a/src/components/type/type.pug
+++ b/src/components/type/type.pug
@@ -3,12 +3,12 @@
 mixin type({ type, text })
 
   .type
-    .type__name(class="type__name_font_" + type)= type
+    .type__name(class=`type__name_font_${type}`)= type
     if (type == "H1")
-      h1.type__text(class="type__text_font_H1")= text
+      h1.type__text.type__text_font_H1= text
     if (type == "H2")
-      h2.type__text(class="type__text_font_H2")= text
+      h2.type__text.type__text_font_H2= text
     if (type == "H3")
-      h3.type__text(class="type__text_font_H3")= text
+      h3.type__text.type__text_font_H3= text
     if (type == "body")
-      p.type__text(class="type__text_font_body")= text
+      p.type__text.type__text_font_body= text
