Fixed user-select on clickable elements #16

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -10,6 +10,7 @@
   border: none;
   outline: none;
   cursor: pointer;
+  user-select: none;
   transition: opacity 0.4s;
   &_place_in-form {
     min-width: 99px;
