--- a/src/components/submit-button/submit-button.scss
+++ b/src/components/submit-button/submit-button.scss
@@ -1,6 +1,7 @@
 @import '../../scss/variables.scss';
 
 .submit-button {
+  user-select: none;
   &__button {
     position: relative;
     width: 100%;
