--- a/src/components/abouts-room/abouts-room.scss
+++ b/src/components/abouts-room/abouts-room.scss
@@ -18,6 +18,7 @@
     color: $color-secondary;
     margin-right: 10px;
     padding-bottom: 20px;
+    user-select: none;
   }
   &__text {
     margin: 0;
