--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -57,6 +57,7 @@
     color: $color-main-50;
     text-decoration: none;
     margin-bottom: 20px;
+    user-select: none;
     &:last-child {
       margin-bottom: 0;
     }
