--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -13,6 +13,7 @@
     color: $color-main-50;
     text-align: center;
     border-radius: 22px;
+    user-select: none;
     &_type {
       &_current {
         opacity: 1;
