--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -12,6 +12,7 @@
   }
   &__preview {
     position: relative;
+    user-select: none;
     &:hover .room-card__arrow {
       opacity: 1;
     }
@@ -79,6 +80,7 @@
   &__link {
     color: $color-main-100;
     text-decoration: none;
+    user-select: none;
     transition: color 0.5s;
     &_no-lux {
       margin-right: auto;
