Fixed datepicker pointer #16

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -37,8 +37,8 @@
       visibility: hidden;
     }
   }
-  &__apply {
-    color: $color-secondary;
+  &--pointer {
+    display: none;
   }
   &--content {
     padding-left: 19px;
