--- a/src/components/block-color/block-color.scss
+++ b/src/components/block-color/block-color.scss
@@ -8,33 +8,34 @@
     width: 4.375rem;
     height: 4.375rem;
     border-radius: 6px;
+    &_color {
+      &_dark-shade-100 {
+        background-color: $color-main-100;
+      }
 
-    &_dark-shade-100 {
-      background-color: $color-main-100;
-    }
+      &_dark-shade-75 {
+        background-color: $color-main-75;
+      }
 
-    &_dark-shade-75 {
-      background-color: $color-main-75;
-    }
+      &_dark-shade-50 {
+        background-color: $color-main-50;
+      }
 
-    &_dark-shade-50 {
-      background-color: $color-main-50;
-    }
+      &_dark-shade-25 {
+        background-color: $color-main-25;
+      }
 
-    &_dark-shade-25 {
-      background-color: $color-main-25;
-    }
+      &_dark-shade-05 {
+        background-color: $color-main-05;
+      }
 
-    &_dark-shade-05 {
-      background-color: $color-main-05;
-    }
+      &_purple {
+        background-color: $color-secondary;
+      }
 
-    &_purple {
-      background-color: $color-secondary;
-    }
-
-    &_green {
-      background-color: $color-tertiary;
+      &_green {
+        background-color: $color-tertiary;
+      }
     }
   }
   &__description {
